--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "keeper-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.17.1",
+    "npm": "6.4.13"
+  },
   "dependencies": {
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
